--- a/build.gradle
+++ b/build.gradle
@@ -24,48 +24,40 @@ repositories {
 }
 
 dependencies {
+    // Core Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // MongoDB Starter
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+    // Lombok
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // Dependencias esenciales de Spring Boot
-
-
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
     // OpenAPI/Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
-    // Tomcat (solo si necesitas configuraciones personalizadas)
+    // Tomcat (opcional, pero útil si quieres personalizar)
     implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-
-    // security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // Base de datos (ajusta según la que uses)
-    implementation 'com.h2database:h2' // Para pruebas
-
-    // implementation 'org.postgresql:postgresql' // Para PostgreSQL
-    implementation 'mysql:mysql-connector-java' // Para MySQL
-    implementation("mysql:mysql-connector-java:8.0.33") // Versión actualizada del driver de MySQL
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation 'mysql:mysql-connector-java:8.0.33' // Versión actualizada del driver de MySQL
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // Depencencia para mappers usando mapstruct
+    // MapStruct
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+    // Opcionales (comentados) para bases de datos SQL
+    // implementation 'mysql:mysql-connector-java:8.0.33'
+    // implementation 'com.h2database:h2'
+    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
