--- a/build.gradle
+++ b/build.gradle
@@ -51,13 +51,10 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
-    // Opcionales (comentados) para bases de datos SQL
-    // implementation 'mysql:mysql-connector-java:8.0.33'
-    // implementation 'com.h2database:h2'
-    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // Spring Security
+    implementation 'org.springframework.security:spring-security-crypto'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
-
