--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation 'mysql:mysql-connector-java:8.0.33' // Versión actualizada del driver de MySQL
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
     // Depencencia para mappers usando mapstruct
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
