--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     // Core Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+ //   implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // MongoDB Starter
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
