--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,11 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/Avanzada
+      uri: mongodb://localhost:27017/prog
+
+
+
+
 # configuracion de springboot para conectarse a la base de datos local que se creara usando MySQL
 # Astolfo3S@  --PASSWORD MYSQL FEDORA
 #Aviso Es MongoDB spring:
