--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ jwt.secret=OGxqZVFLU3ZqdzdUclF4QWtoTWY3RHFjTmFnTW1GR2Y=
 
 
 # Credenciales para SendGrid(enviador de correos) del correo electrónico , apikey es la clave del sendgrid la tiene la cuenta jsebasjava31@gmail.com
-spring.sendgrid.api-key=elcodigodesendgridvaAqui......apikey
+spring.sendgrid.api-key= apikey
 spring.sendgrid.sender-email=jsebasjava31@gmail.com
